Eclipse Link dop task, first try

--- a/pom.xml
+++ b/pom.xml
@@ -49,19 +49,6 @@
     </dependency>
 
     <dependency>
-      <groupId>org.hibernate.orm</groupId>
-      <artifactId>hibernate-core</artifactId>
-      <version>6.6.2.Final</version>
-    </dependency>
-
-    <dependency>
-      <groupId>org.hibernate</groupId>
-      <artifactId>hibernate-entitymanager</artifactId>
-      <version>5.6.15.Final</version>
-    </dependency>
-
-
-    <dependency>
       <groupId>org.postgresql</groupId>
       <artifactId>postgresql</artifactId>
       <version>42.7.4</version>
@@ -78,6 +65,14 @@
       <artifactId>jboss-jsf-api_2.3_spec</artifactId>
       <version>3.1.0.SP02</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.eclipse.persistence</groupId>
+      <artifactId>eclipselink</artifactId>
+      <version>4.0.4</version>
+    </dependency>
+
+
   </dependencies>
 
   <build>
